--- a/Dutluk/res/layout/register.xml
+++ b/Dutluk/res/layout/register.xml
@@ -105,6 +105,18 @@
 			android:text="@string/btnProfile"
             android:textColor="#228b22"
             android:textStyle="bold" /> 
+        <!-- GEREKSIZ -->
+		<!-- Link to Add Story Screen -->
+        <Button
+            android:id="@+id/btnLinkToAddStoryScreenRegister"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dip"
+            android:background="@null"
+            android:onClick="navigatetoAddStoryActivity"
+			android:text="@string/btnAddStory"
+            android:textColor="#228b22"
+            android:textStyle="bold" /> 
             
     </LinearLayout>
 
