--- a/Dutluk/res/layout/add_story.xml
+++ b/Dutluk/res/layout/add_story.xml
@@ -31,6 +31,18 @@
 	            android:hint="@string/enterStory"
 	            android:textSize="18sp" />	          
 		</LinearLayout>
+			<!-- Tags Part -->
+		<LinearLayout
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:orientation="horizontal">
+	        <EditText
+	            android:id="@+id/storyTagsAddStory"
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:hint="@string/enterTags"
+	            android:textSize="18sp" />	          
+		</LinearLayout>
 		
 		<!-- Place Part 
 		<RelativeLayout 
