--- a/Web/WebContent/Resources/css/custom.css
+++ b/Web/WebContent/Resources/css/custom.css
@@ -1,5 +1,24 @@
 @CHARSET "US-ASCII";
+#nav {
+	line-height: 30px;
+	height: 300px;
+	width: 100px;
+	float: right;
+	padding-top: 25px;
+}
 
+#story {
+	width: 350px;
+	height: 100px;
+	float: left;
+	padding: 10px;
+}
+
+#storyend {
+	width: 350px;
+	float: left;
+	padding: 10px;
+}
 .header {
 	padding: 5px 20px 0 20px;
 	height: 50px;
