--- a/Web/WebContent/Resources/css/custom.css
+++ b/Web/WebContent/Resources/css/custom.css
@@ -1,4 +1,20 @@
 @CHARSET "US-ASCII";
+* {
+margin: 0;
+padding: 0;
+}
+.indexBody {
+	position:relative;
+	z-index: 2;
+	top:-40px;
+	width:100%;
+	padding:0 40px 0 40px;
+}
+
+.headerBody {
+	padding:20px 40px 0 40px;
+	width:100%;
+}
 #nav {
 	line-height: 30px;
 	height: 300px;
@@ -19,9 +35,13 @@
 	float: left;
 	padding: 10px;
 }
+.nopadding {
+	padding:0 !important;
+}
 .header {
-	padding: 5px 20px 0 20px;
-	height: 50px;
+	position:relative;
+	z-index:1;
+	height: 100px;
 	background-color: #e7dab7;
 	font-size:18px;	
 	font-family: Helvetica; font-weight: bold;
@@ -32,11 +52,17 @@
 }
 
 #map-canvas {
-	height: 1000px; width: 100%;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 #map-container {
-	
+	width: 100%;
+	padding-bottom: 100%;
+	position: relative;
 }
 
 .alignleft {
@@ -54,11 +80,63 @@
 }
 
 #searchForm {
-	margin-right:30px;
-	margin-top:-3px;
+	width:100%;
 }
 
 #searchButton {
 	height: 34px;
 }
 
+body {
+	position:relative;
+}
+
+.controls {
+	margin-top: 21px;
+	border: 1px solid transparent;
+	border-radius: 2px 0 0 2px;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	height: 32px;
+	outline: none;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+  background-color: #fff;
+  padding: 5px 11px 0 13px;
+  width: 400px;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  text-overflow: ellipsis;
+  
+}
+
+#pac-input:focus {
+  border-color: #4d90fe;
+  margin-left: -1px;
+  padding-left: 14px;  /* Regular padding-left + 1. */
+  width: 401px;
+}
+
+#pac-container {
+  font-family: Roboto;
+}
+
+#type-selector {
+  color: #fff;
+  background-color: #4d90fe;
+  padding: 5px 11px 0px 11px;
+}
+
+#type-selector label {
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 300;
+}
+
+#newsFeedContainer {
+	background-color: #f3aac4;
+	margin: 0px 10px 0 10px;
+}
