--- a/Web/WebContent/Resources/css/custom.css
+++ b/Web/WebContent/Resources/css/custom.css
@@ -12,8 +12,12 @@ padding: 0;
 }
 
 .headerBody {
-	padding:20px 40px 0 40px;
+	padding:15px 40px 0 40px;
 	width:100%;
+}
+
+.headerBody > a {
+	margin-top:5px;
 }
 #nav {
 	line-height: 30px;
@@ -92,7 +96,7 @@ body {
 }
 
 .controls {
-	margin-top: 21px;
+	margin-top: 27px;
 	border: 1px solid transparent;
 	border-radius: 2px 0 0 2px;
 	box-sizing: border-box;
