--- a/LoginActivity/res/layout/show_story.xml
+++ b/LoginActivity/res/layout/show_story.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light"
+     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dip" >
+
 
         <!-- View Title Label -->
 
@@ -19,22 +18,22 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-         <!-- Image Part -->
-            <LinearLayout
-                android:id="@+id/imageLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"   
-                android:gravity="center"
-                android:orientation="vertical" >
+        <!-- Image Part -->
 
-                <ImageView
-                    android:id="@+id/imageViewShowStory"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/hello_world"
-                    android:src="@drawable/ic_launcher" />
-            </LinearLayout>
-        
+        <LinearLayout
+            android:id="@+id/imageLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <ImageView
+                android:id="@+id/imageViewShowStory"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/hello_world"
+                android:src="@drawable/ic_launcher" />
+        </LinearLayout>
 
         <!-- Story Part -->
 
@@ -50,9 +49,19 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+      
 
-       
-       
+            <ListView
+                android:id="@+id/commentList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="#b5b5b5"
+                android:dividerHeight="1dp"
+                android:listSelector="@drawable/list_selector"
+                android:longClickable="true" >
+            </ListView>
+
+
         <!-- Error message -->
 
         <TextView
@@ -67,8 +76,8 @@
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical" 
-            android:gravity="center">
+            android:gravity="center|bottom"
+            android:orientation="vertical" >
 
             <!-- I Remember That button -->
 
@@ -76,14 +85,14 @@
                 android:id="@+id/btnIRememberThat"
                 android:layout_width="72dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_marginTop="20dip"
                 android:background="#ff6347"
                 android:onClick="iRememberThatAction"
-    			android:layout_alignParentLeft="true"
                 android:text="@string/btnIRememberThat"
                 android:textColor="#fff"
                 android:textSize="12sp" />
-			 <!-- Comments button -->
+            <!-- Comments button -->
 
             <Button
                 android:id="@+id/btnComments"
@@ -97,7 +106,7 @@
                 android:text="@string/btnComments"
                 android:textColor="#fff"
                 android:textSize="12sp" />
-             <!-- Subscribe Writer button -->
+            <!-- Subscribe Writer button -->
 
             <Button
                 android:id="@+id/btnSubscribeWriter"
@@ -118,20 +127,16 @@
                 android:layout_width="72dp"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/btnIRememberThat"
-                android:layout_toRightOf="@+id/btnSubscribeWriter"
                 android:layout_alignTop="@+id/btnIRememberThat"
+                android:layout_toRightOf="@+id/btnSubscribeWriter"
                 android:background="#ff6347"
                 android:minWidth="50dp"
                 android:onClick="subscribePlaceAction"
                 android:text="@string/btnSubscribePlace"
                 android:textColor="#fff"
                 android:textSize="12sp" />
-
-           
-
-           
-
         </RelativeLayout>
-    </LinearLayout>
 
-</ScrollView>
+
+
+</RelativeLayout>
