--- a/LoginActivity/res/layout/timeline.xml
+++ b/LoginActivity/res/layout/timeline.xml
@@ -2,32 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    tools:context=".MainActivity" >
+    android:background="@android:color/background_light">
 
-<!--     <LinearLayout
-        android:id="@+id/textLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="20dip"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/guide"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="guide" />
-    </LinearLayout> -->
-
-    <LinearLayout
-        android:id="@+id/listlayout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/reklam" >
 
         <ListView
             android:id="@+id/listView1"
@@ -38,16 +14,8 @@
             android:listSelector="@drawable/list_selector"
             android:longClickable="true" >
         </ListView>
-    </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/reklam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:gravity="center"
-        android:orientation="horizontal" >
-    </LinearLayout>
+
+
 
 </RelativeLayout>
