--- a/LoginActivity/res/layout/add_story.xml
+++ b/LoginActivity/res/layout/add_story.xml
@@ -8,7 +8,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dip" >
+
         <!-- View Title Label -->
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -16,114 +18,120 @@
             android:text="@string/title_activity_addStory"
             android:textSize="25sp"
             android:textStyle="bold" />
-        		
-		
-		
-		<!-- Story Part -->
-		<LinearLayout
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:orientation="horizontal">
-	        <EditText
-	            android:id="@+id/storyAddStory"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:hint="@string/enterStory"
-	            android:textSize="18sp" />	          
-		</LinearLayout>
-			<!-- Tags Part -->
-		<LinearLayout
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:orientation="horizontal">
-	        <EditText
-	            android:id="@+id/storyTagsAddStory"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            android:hint="@string/enterTags"
-	            android:textSize="18sp" />	          
-		</LinearLayout>
-		
-		<!-- Place Part 
-		<RelativeLayout 
-			    android:layout_width="fill_parent"
-			    android:layout_height="48dp"
-			    android:orientation="vertical" >
-		
-	  		<LinearLayout
-	  		    android:id="@+id/placeLayout"
-	        	android:layout_width="fill_parent"
-	        	android:layout_height="48dp"
-	        	android:gravity="bottom"
-	        	android:layout_alignParentTop="true"
-         		android:layout_alignParentLeft="true"
-         		android:layout_toLeftOf="@+id/mapButtonAddStory"
-	        	android:orientation="horizontal">
-		         <TextView
-		            android:id="@+id/placeAddStory"
-		            android:layout_width="fill_parent"
-		            android:layout_height="48dp"
-		            android:textSize="18sp" />	             
-			</LinearLayout>
-	     	<ImageButton
-	             android:id="@+id/mapButtonAddStory"
-	             android:layout_width="48dp"
-	             android:layout_height="48dp"
-	             android:onClick="navigatetoMapActivity"
-	             android:src="@drawable/world"
-	             android:layout_alignParentTop="true"
-	             android:layout_alignParentRight="true"
-	         	android:contentDescription="@string/hello_world" />
-	     	
-		</RelativeLayout>
-      -->
-  		<!-- Time Part -->
-		<LinearLayout
-        	android:layout_width="fill_parent"
-        	android:layout_height="48dp"
-        	android:orientation="horizontal">
-	        <EditText
-	            android:id="@+id/timeAddStory"
-	            android:layout_width="fill_parent"
-	            android:layout_height="48dp"
-	            android:hint="@string/pickTime"
-	            android:textSize="18sp"/>          
-		</LinearLayout>
-		<!-- Image Part -->
-		<RelativeLayout 
-			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
-			    android:orientation="vertical" >
 
-	  		<LinearLayout
-	  		    android:id="@+id/imageLayout"
-	        	android:layout_width="match_parent"
-	        	android:layout_height="wrap_content"
-	        	android:gravity="bottom"
-	        	android:layout_alignParentTop="true"
-         		android:layout_alignParentLeft="true"
-         		android:layout_toLeftOf="@+id/imageButtonAddStory"
-	        	android:orientation="vertical">
+        <!-- Story Part -->
 
-		         <ImageView
-		             android:id="@+id/imageViewAddStory"
-		             android:layout_width="match_parent"
-		             android:layout_height="match_parent"
-		             android:contentDescription="@string/hello_world"
-		             android:src="@drawable/ic_launcher" />
-	             
-			</LinearLayout>
-	     	<ImageButton
-	             android:id="@+id/imageButtonAddStory"
-	             android:layout_width="48dp"
-	             android:layout_height="48dp"
-	             android:onClick="goImageSelector"
-	             android:src="@drawable/paperclip"
-	             android:layout_alignParentTop="true"
-	             android:layout_alignParentRight="true"
-	         	android:contentDescription="@string/hello_world" />
-		</RelativeLayout>
-		<!-- Error message -->
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/storyAddStory"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enterStory"
+                android:textSize="18sp" />
+        </LinearLayout>
+        <!-- Tags Part -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/storyTagsAddStory"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enterTags"
+                android:textSize="18sp" />
+        </LinearLayout>
+        <!-- Theme Part -->
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <Spinner
+                android:id="@+id/spinnerAddStory"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown"
+                 />
+        </LinearLayout>
+        <!-- Time Part -->
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="48dp"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/timeLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="48dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/timeButtonAddStory"
+                android:gravity="bottom"
+                android:orientation="horizontal" >
+
+                <EditText
+                    android:id="@+id/timeAddStory"
+                    android:layout_width="fill_parent"
+                    android:layout_height="48dp"
+                    android:hint="@string/pickTime"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/timeButtonAddStory"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:contentDescription="@string/hello_world"
+                android:src="@drawable/calendar" />
+        </RelativeLayout>
+        <!-- Image Part -->
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <LinearLayout
+                android:id="@+id/imageLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/imageButtonAddStory"
+                android:gravity="bottom"
+                android:orientation="horizontal" >
+
+                <ImageView
+                    android:id="@+id/imageViewAddStory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/hello_world"
+                    android:src="@drawable/ic_launcher" />
+            </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/imageButtonAddStory"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:contentDescription="@string/hello_world"
+                android:onClick="goImageSelector"
+                android:src="@drawable/paperclip" />
+        </RelativeLayout>
+        <!-- Error message -->
+
         <TextView
             android:id="@+id/errorAddStory"
             android:layout_width="fill_parent"
@@ -132,8 +140,9 @@
             android:padding="10dip"
             android:textColor="#e30000"
             android:textStyle="bold" />
-        
-		<!-- Add Story button -->
+
+        <!-- Add Story button -->
+
         <Button
             android:id="@+id/btnAddStory"
             android:layout_width="fill_parent"
@@ -143,7 +152,6 @@
             android:onClick="navigatetoMapActivity"
             android:text="@string/btnAddStory"
             android:textColor="#fff" />
-        
     </LinearLayout>
 
 </ScrollView>
