--- a/LoginActivity/res/layout/forgotpwd.xml
+++ b/LoginActivity/res/layout/forgotpwd.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-   <LinearLayout
+  <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -32,23 +32,13 @@
             android:hint="@string/enterEmail"
             android:inputType="textEmailAddress" />
  
-		<!-- Error message -->
-        <TextView
-            android:id="@+id/errorForgotpwd"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dip"
-            android:textColor="#e30000"
-            android:textStyle="bold" />
-        
 		<!-- Reset Password button -->
         <Button
             android:id="@+id/btnResetPwdForgotpwd"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="#ff6347"
+            android:background="#10BCC9"
             android:onClick="resetPassword"
             android:text="@string/btnResetPwd"
             android:textColor="#fff" />
