--- a/LoginActivity/res/layout/login.xml
+++ b/LoginActivity/res/layout/login.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <LinearLayout
+   <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -47,15 +47,7 @@
             android:hint="@string/enterPassword"
             android:inputType="textPassword" />
         
-		<!-- Error message -->
-        <TextView
-            android:id="@+id/errorLogin"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dip"
-            android:textColor="#e30000"
-            android:textStyle="bold" />
+
         
 		<!-- Login button -->
         <Button
@@ -63,7 +55,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="#ff6347"
+            android:background="#10BCC9"
             android:onClick="loginUser"
             android:text="@string/btnLogin"
             android:textColor="#fff" />
@@ -76,7 +68,7 @@
             android:background="#fff"
             android:onClick="navigateToForgotPasswordActivity"
             android:text="@string/btnForgotPwdLogin"
-            android:textColor="#ff6347" />
+            android:textColor="#10BCC9" />
         
 		<!-- Link to Register Screen -->
         <Button
@@ -87,7 +79,7 @@
             android:background="@null"
             android:onClick="navigatetoRegisterActivity"
             android:text="@string/btnRegister"
-            android:textColor="#228b22"
+            android:textColor="#10BCC9"
             android:textStyle="bold" />
 
         
