--- a/LoginActivity/res/layout/more.xml
+++ b/LoginActivity/res/layout/more.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Daha Fazla Sonuç" />
+            android:text="More Results" />
     </LinearLayout>
 
 </LinearLayout>
